--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/tabhost"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:padding="5dp">
-        <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-        <FrameLayout
-            android:id="@android:id/tabcontent"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:padding="5dp" />
-    </LinearLayout>
+	android:id="@android:id/tabhost" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	<RelativeLayout android:orientation="vertical"
+		android:layout_height="match_parent" android:layout_width="match_parent">
+		<TabWidget android:layout_alignParentTop="true" android:id="@android:id/tabs"
+			android:layout_width="fill_parent" android:layout_height="wrap_content"
+			android:visibility="gone" />
+		<FrameLayout android:id="@android:id/tabcontent"
+			android:layout_below="@android:id/tabs"
+			android:layout_alignParentLeft="true" android:layout_width="match_parent"
+			android:layout_height="match_parent" android:layout_above="@+id/currentActivityLayout"></FrameLayout>
+		<RelativeLayout android:layout_width="match_parent"
+			android:id="@+id/currentActivityLayout"
+			android:layout_alignParentBottom="true"
+			android:layout_alignParentLeft="true" android:layout_height="50dp">
+			<View android:id="@+id/separator" android:background="#ffffff"
+				android:layout_width="fill_parent" android:layout_height="2dp"
+				android:layout_alignParentTop="true" />
+			<TextView android:id="@+id/mediaTitle" android:text="Unknown"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_width="wrap_content" android:layout_below="@+id/separator"
+				android:layout_alignParentLeft="true" android:layout_height="25dp" android:layout_alignParentRight="true"></TextView>
+			<TextView android:id="@+id/mediaSubtitle" android:text=""
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_width="wrap_content" android:layout_below="@+id/mediaTitle"
+				android:layout_alignParentLeft="true" android:layout_alignRight="@+id/mediaTitle"
+				android:layout_height="17dp"></TextView>
+		</RelativeLayout>
+	</RelativeLayout>
 </TabHost>
-
